// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Definition social facebook dialog Component default snaphsot 1`] = `
"<DialogContainer id=\\"focusFeedDefinitionSocialFacebookDialog\\" visible={true} onHide={[Function]} aria-labelledby=\\"focusFeedDefinitionSocialFacebookDialog\\" focusOnMount={false} autopadContent={true} autosizeContent={true} component=\\"span\\" closeOnEsc={true} contentComponent=\\"section\\" transitionEnterTimeout={300} transitionLeaveTimeout={300} defaultVisibleTransitionable={false} activeElementFocus={true}>
  <div className=\\"dialog-content\\">
    <div className=\\"dialog-close-button\\">
      <FontIcon onClick={[Function]} iconClassName=\\"material-icons\\">
        clear
      </FontIcon>
    </div>
    <div className=\\"dialog-header\\">
      <div className=\\"dialog-header-icon\\">
        <FontIcon iconClassName=\\"icon-instagram\\" />
      </div>
      <div className=\\"dialog-header-title\\">
        facebook_login.instagram.title
      </div>
    </div>
    <div className=\\"dialog-content-body\\">
      <div className=\\"dialog-content-body-text\\">
        facebook_login.instagram.description
      </div>
      <div className=\\"dialog-content-body-facebook-header\\">
        <FontIcon iconClassName=\\"icon-facebook\\" />
        <span>
          facebook_login.instagram.facebook_pages_label
        </span>
      </div>
      <div className=\\"dialog-content-body-facebook-page\\">
        <div className=\\"dialog-content-body-facebook-page-info\\">
          <Memo() url=\\"fakeurlpage.com\\">
            <FontIcon iconClassName=\\"icon-facebook\\" />
          </Memo()>
          <span>
            Facebook page
          </span>
        </div>
        <div className=\\"page-info-instagram-text\\">
          facebook_login.instagram.page_related_profiles_label
        </div>
        <div className=\\"dialog-content-body-facebook-page-instagram-account\\">
          <Memo() url=\\"fakeurl.com\\">
            <FontIcon iconClassName=\\"icon-instagram\\" />
          </Memo()>
          <div className=\\"dialog-content-body-facebook-page-instagram-account-info\\">
            <div className=\\"title\\">
              IG account
            </div>
            <div>
              @
              fakeuser
            </div>
          </div>
          <SelectionControl id=\\"focusFeedDefinitionSocialFacebookDialogInstagramCheckboxsearchIg1\\" type=\\"checkbox\\" label=\\"facebook_login.instagram.connect\\" name=\\"focusFeedHeaderToggleFeedEnabled\\" checked={false} disabled={false} onChange={[Function: onChange]} checkedCheckboxIcon={{...}} uncheckedCheckboxIcon={{...}} checkedRadioIcon={{...}} uncheckedRadioIcon={{...}} />
        </div>
        <div className=\\"dialog-content-body-facebook-page-instagram-account\\">
          <Memo() url=\\"fakeurl.com\\">
            <FontIcon iconClassName=\\"icon-instagram\\" />
          </Memo()>
          <div className=\\"dialog-content-body-facebook-page-instagram-account-info\\">
            <div className=\\"title\\">
              IG account
            </div>
            <div>
              @
              fakeuser
            </div>
          </div>
          <SelectionControl id=\\"focusFeedDefinitionSocialFacebookDialogInstagramCheckboxid1\\" type=\\"checkbox\\" label=\\"facebook_login.instagram.connected\\" name=\\"focusFeedHeaderToggleFeedEnabled\\" checked={true} disabled={true} onChange={[Function: onChange]} checkedCheckboxIcon={{...}} uncheckedCheckboxIcon={{...}} checkedRadioIcon={{...}} uncheckedRadioIcon={{...}} />
        </div>
      </div>
    </div>
    <div className=\\"dialog-footer\\">
      <withInk(withTooltip(Button)) flat={true} id=\\"focusFeedDefinitionSocialFacebookDialogCancelBtn\\" onClick={[Function]} inkTransitionOverlap={150} inkTransitionEnterTimeout={450} inkTransitionLeaveTimeout={300}>
        form.cancel
      </withInk(withTooltip(Button))>
      <withInk(withTooltip(Button)) flat={true} id=\\"focusFeedDefinitionSocialFacebookDialogAcceptBtn\\" onClick={[Function]} inkTransitionOverlap={150} inkTransitionEnterTimeout={450} inkTransitionLeaveTimeout={300}>
        form.accept
      </withInk(withTooltip(Button))>
    </div>
  </div>
</DialogContainer>"
`;

exports[`Definition social facebook dialog Component snapshot when searching accounts 1`] = `
"<DialogContainer id=\\"focusFeedDefinitionSocialFacebookDialog\\" visible={true} onHide={[Function]} aria-labelledby=\\"focusFeedDefinitionSocialFacebookDialog\\" focusOnMount={false} autopadContent={true} autosizeContent={true} component=\\"span\\" closeOnEsc={true} contentComponent=\\"section\\" transitionEnterTimeout={300} transitionLeaveTimeout={300} defaultVisibleTransitionable={false} activeElementFocus={true}>
  <div className=\\"dialog-content\\">
    <div className=\\"dialog-close-button\\">
      <FontIcon onClick={[Function]} iconClassName=\\"material-icons\\">
        clear
      </FontIcon>
    </div>
    <div className=\\"dialog-header\\">
      <div className=\\"dialog-header-icon\\">
        <FontIcon iconClassName=\\"icon-instagram\\" />
      </div>
      <div className=\\"dialog-header-title\\">
        facebook_login.instagram.title
      </div>
    </div>
    <div className=\\"dialog-content-body\\">
      <div className=\\"dialog-content-body-text\\">
        facebook_login.instagram.description
      </div>
      <CircularProgress id=\\"focusFeedDefinitionSocialFacebookDialogLoading\\" style={{...}} scale={1} determinateDashoffset={187} centered={true} />
    </div>
  </div>
</DialogContainer>"
`;

exports[`Definition social facebook dialog Component snapshot with no facebook pages 1`] = `
"<DialogContainer id=\\"focusFeedDefinitionSocialFacebookDialog\\" visible={true} onHide={[Function]} aria-labelledby=\\"focusFeedDefinitionSocialFacebookDialog\\" focusOnMount={false} autopadContent={true} autosizeContent={true} component=\\"span\\" closeOnEsc={true} contentComponent=\\"section\\" transitionEnterTimeout={300} transitionLeaveTimeout={300} defaultVisibleTransitionable={false} activeElementFocus={true}>
  <div className=\\"dialog-content\\">
    <div className=\\"dialog-close-button\\">
      <FontIcon onClick={[Function]} iconClassName=\\"material-icons\\">
        clear
      </FontIcon>
    </div>
    <div className=\\"dialog-header\\">
      <div className=\\"dialog-header-icon\\">
        <FontIcon iconClassName=\\"icon-instagram\\" />
      </div>
      <div className=\\"dialog-header-title\\">
        facebook_login.instagram.title
      </div>
    </div>
    <div className=\\"dialog-content-body\\">
      <div className=\\"dialog-content-body-text\\">
        facebook_login.instagram.description
      </div>
      <div className=\\"dialog-content-body-facebook-empty\\">
        facebook_login.instagram.no_results
      </div>
    </div>
    <div className=\\"dialog-footer\\">
      <withInk(withTooltip(Button)) flat={true} id=\\"focusFeedDefinitionSocialFacebookDialogCancelBtn\\" onClick={[Function]} inkTransitionOverlap={150} inkTransitionEnterTimeout={450} inkTransitionLeaveTimeout={300}>
        form.cancel
      </withInk(withTooltip(Button))>
      <withInk(withTooltip(Button)) flat={true} id=\\"focusFeedDefinitionSocialFacebookDialogAcceptBtn\\" onClick={[Function]} inkTransitionOverlap={150} inkTransitionEnterTimeout={450} inkTransitionLeaveTimeout={300}>
        form.accept
      </withInk(withTooltip(Button))>
    </div>
  </div>
</DialogContainer>"
`;

exports[`Definition social facebook dialog Component snapshot without facebook user id 1`] = `
"<DialogContainer id=\\"focusFeedDefinitionSocialFacebookDialog\\" visible={true} onHide={[Function]} aria-labelledby=\\"focusFeedDefinitionSocialFacebookDialog\\" focusOnMount={false} autopadContent={true} autosizeContent={true} component=\\"span\\" closeOnEsc={true} contentComponent=\\"section\\" transitionEnterTimeout={300} transitionLeaveTimeout={300} defaultVisibleTransitionable={false} activeElementFocus={true}>
  <div className=\\"dialog-content\\">
    <div className=\\"dialog-close-button\\">
      <FontIcon onClick={[Function]} iconClassName=\\"material-icons\\">
        clear
      </FontIcon>
    </div>
    <div className=\\"dialog-header\\">
      <div className=\\"dialog-header-icon\\">
        <FontIcon iconClassName=\\"icon-instagram\\" />
      </div>
      <div className=\\"dialog-header-title\\">
        facebook_login.instagram.title
      </div>
    </div>
    <div className=\\"dialog-content-body\\">
      <div className=\\"dialog-content-body-description\\">
        <p>
          facebook_login.instagram.description_1
          <br />
          facebook_login.instagram.description_2
        </p>
        <p>
          facebook_login.instagram.description_3
        </p>
        <p>
          facebook_login.instagram.description_4
        </p>
      </div>
      <div className=\\"dialog-content-body-facebook-button\\">
        <Connect(FacebookAuth) permissions={{...}} onLogin={[Function]} />
      </div>
    </div>
  </div>
</DialogContainer>"
`;
